--- a/template/index.html
+++ b/template/index.html
@@ -149,7 +149,7 @@
           </div>
         </div>
         <p class="l-footer__copyright">
-          <small>©︎ 2023 KANTAN! CMS STARTER All right reserved.</small>
+          <small>©︎ 2023 きなこもちお All right reserved.</small>
         </p>
       </footer>
       <!-- / footer -->
